--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,3 +27,19 @@ a {
   color: inherit;
   text-decoration: none;
 }
+/*========Header==========*/
+.navigation ul {
+  list-style-type: none;
+  display: flex;
+  margin: 0px;
+  padding: 0;
+}
+
+.navigation ul li {
+}
+
+.navigation ul li a {
+  text-decoration: none;
+  color: #000;
+  padding: 5px 15px;
+}
