--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,6 @@ body {
 body {
   color: #000;
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: var(--primary-font);
@@ -65,6 +64,7 @@ a {
   padding: 5px 18px;
   font-size: 18px;
   font-weight: 600;
+  font-family: var(--primary-font);
 }
 
 .hero h1 {
