--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -127,6 +127,7 @@ dl {
   bottom: 0;
   background-color: #000;
   opacity: 0.3;
+  width: 100vw;
   /* cursor: pointer;
   width: 100vw;
   height: 100vh; */
