--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -211,6 +211,17 @@ dl {
 /*========Hero Section==========*/
 .hero {
   position: relative;
+  /* background: linear-gradient(
+    177deg,
+    rgba(255, 255, 255, 0.68531162464986) 20%,
+    rgba(255, 255, 255, 0.9458158263305322) 40%,
+    rgba(255, 255, 255, 1) 90%
+  ); */
+  /* background: linear-gradient(
+    176deg,
+    rgba(34, 193, 195, 1) 0%,
+    rgba(253, 187, 45, 0.6404936974789917) 100%
+  ); */
 }
 .hero .bottom-shape {
   position: absolute;
@@ -269,6 +280,24 @@ dl {
 }
 .hero .baloon-shape img {
   width: 150px;
+}
+
+#video-bg,
+.video-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.video-background {
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+  z-index: -1;
+}
+#video-bg {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 /*========Headings==========*/
 .main-heading h1 {
